# optitest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: __init__.py  app.py  config.py
dashboard/components/: __init__.py  charts.py  decision.py  export.py  layout.py  metrics.py  stat_tables.py
dashboard/pages/: __init__.py  about.py  analysis.py  history.py
dashboard/utils/: __init__.py  helpers.py  state.py  theme.py
data/: sample_experiment.csv  sample_per_user.csv
notebooks/: 01_EDA.ipynb  02_Z_Test.ipynb  03_Confidence_Intervals.ipynb  04_Effect_Size.ipynb
src/ab_testing_framework/: __init__.py  analysis.py  bayesian.py  chi_square.py  confidence_interval.py  data_loader.py  effect_size.py  metrics.py  multiple_testing.py  power_analysis.py  report_generator.py  sequential.py  validation.py  visualization.py  z_test.py
tests/: conftest.py  test_dashboard_integration.py  test_data_loader.py  test_framework.py  test_statistical_edges.py  test_statistical_properties.py
