[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-testing-framework"
version = "0.1.0"
description = "A statistically sound A/B testing framework with analysis and dashboard support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
