[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-testing-framework"
version = "0.1.0"
description = "A statistically sound A/B testing framework with analysis and dashboard support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OptiTest", email = "contact@optitest.dev"},
]
keywords = ["ab-testing", "statistics", "hypothesis-testing", "streamlit", "conversion-rate"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "pydantic>=2.7",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "hypothesis>=6.100"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["ab_testing_framework", "dashboard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
