[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-testing-framework"
dynamic = ["version"]
description = "A statistically sound A/B testing framework with analysis and dashboard support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OptiTest", email = "contact@optitest.dev"},
]
keywords = ["ab-testing", "statistics", "hypothesis-testing", "streamlit", "conversion-rate"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "pydantic>=2.7",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.13",
    "black>=24.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ab_testing_framework", "dashboard"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools_scm]
write_to = "src/ab_testing_framework/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["ab_testing_framework", "dashboard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
